# Meta-Adaptive-Dynamic-Loss

./: .gitignore
MADL/: publish_target.py  test_madl_ros.py  test_offline.py  utils.py
MADL/config/: config.yaml
MADL/policy/: backbone.py  madl_network.py
controller/: .gitignore  README.md
controller/src/: CMakeLists.txt
controller/src/diffphy_uav_controller/: CMakeLists.txt  package.xml
controller/src/diffphy_uav_controller/config/: controller.yaml
controller/src/diffphy_uav_controller/include/diffphy_uav_controller/: attitude_mapper.h  frame_transform.h
controller/src/diffphy_uav_controller/launch/: offboard_controller.launch
controller/src/diffphy_uav_controller/scripts/: drone_frame_viz.py  fixed_cmd_publisher.py
controller/src/diffphy_uav_controller/src/: attitude_mapper.cpp  offboard_controller_node.cpp
shfiles/: start.sh
